# EnderCliTools

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  typos.toml
.github/workflows/: pr-ci.yml  release-build.yml  release-drafter.yml
debian-bin/: dcps  dps  ect
src/: main.rs
src/args/: config.rs  dcps.rs  dps.rs  mod.rs
src/args/config/: get.rs  mod.rs  reset.rs  set.rs
src/cmd/: config.rs  dcps.rs  dps.rs  mod.rs
src/cmd/config/: get.rs  mod.rs  reset.rs  set.rs
src/config/: mod.rs  model.rs
src/config/model/: dcps.rs  dps.rs  mod.rs  table.rs
src/utils/: docker.rs  mod.rs  table.rs
src/utils/docker/: compose.rs  mod.rs
wix/: License.rtf  main.wxs
wix/alias/: dcps.cmd  dps.cmd  ect.cmd
