[package]
name = "EnderCliTools"
version = "0.1.0"
edition = "2024"
authors = ["Endkind <endkind.ender@gmail.com>"]
license = "MIT"
description = "A collection of CLI utilities that enhance and streamline everyday terminal workflows."
repository = "https://github.com/Endkind/EnderCliTools"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
comfy-table = { version = "7.1.4" }
anyhow = { version = "1.0.99" }
atty = { version = "0.2.14" }
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.9.5" }
directories = { version = "6.0.0" }

[package.metadata.wix]
eula = false

[package.metadata.deb]
maintainer = "Endkind <endkind.ender@gmail.com>"
copyright = "2025, Endkind"
license-file = ["LICENSE", "0"]
extended-description = "EnderCliTools is a lightweight collection of CLI utilities that make working in the terminal faster and more convenient."
section = "utils"
priority = "optional"
depends = ""
assets = [
    ["target/release/EnderCliTools", "/usr/bin/enderclitools", "755"],
    ["debian-bin/ect", "/usr/bin/ect", "755"],
    ["debian-bin/dps", "/usr/bin/dps", "755"],
]
